--- a/index.html
+++ b/index.html
@@ -1,39 +1,31 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Cuội</title>
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body class="container">
-        <header>
-            <div class="header">
-                <div align="right">
-                    <a href="https://www.facebook.com/ChuCuois" target="_blank"><img src="image/icons8-facebook-48.png"></a>
-                    <a href="" onclick="email()"><img src="image/icons8-gmail-logo-48.png"></a>
-                    <a href="" onclick="phone()"><img src="image/icons8-phone-48.png"></a>
-                    <script>
-                        function email(){
-                            alert("8slehieus8@gmail.com");
-                        }
-                        function phone(){
-                            alert("Call me: 0925674671")
-                        }
-                    </script>
-                </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
+</head>
+<body>
+    <header>
+        <img src="https://scontent.fdad3-6.fna.fbcdn.net/v/t1.6435-9/72427354_145233330077886_1727096075883380736_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=174925&_nc_ohc=WOwNzHeTExYAX_DTUtH&_nc_ht=scontent.fdad3-6.fna&oh=00_AfAANDaJGSeXv62qcyvXHn4-yhpW6kn9nHivCN4mY0Dopw&oe=63CD9674">
+        <h1>I'm Hiếu!</h1>
+        <h4>I'm Study FPT Polytechnic</h4>
+            <!-- <div class="radius">
+                rts
+            </div> -->
+            <div class="menu">
+                <ul>
+                    <li class="active"><a href="https://www.facebook.com/ChuCuois"></a><i class="fa-brands fa-facebook"> </i></li>
+                    <li><i class="fa-solid fa-envelope"></i></li>
+                    <li><i class="fa-brands fa-github"></i></li>
+                    <li><i class="fa-solid fa-phone"></i></li>
+                    <div id="action"></div>
+                </ul>
             </div>
-        </header>
-<br>
-        <center class="center">
-            <div>
-                <h1 id="h1">I'M Hiếu You Can Call Me Cuội >.<</h1>
-            <br>
-            <div class="ele exam1">
-                Wellcome To My Profile!
-                <br>
-                Test up File in Github 
-            </div>
-            </div>
-        </center>
-    </body>
+    </header>
+    <script src="index.js"></script>
+</body>
 </html>
